[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/strWeightValue.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/totem.png" type="Texture" id=4]
[ext_resource path="res://scenes/totem.gd" type="Script" id=6]
[ext_resource path="res://resources/placeholderMinimalTextures/circularProgressIndicatorFg.png" type="Texture" id=7]
[ext_resource path="res://resources/placeholderMinimalTextures/circularProgressIndicatorBg.png" type="Texture" id=8]
[ext_resource path="res://scenes/enemySpawner.gd" type="Script" id=9]
[ext_resource path="res://scenes/progressTime.gd" type="Script" id=10]
[ext_resource path="res://resources/sprites/sprBgAltAlt.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/vignette.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/sprEye.png" type="Texture" id=15]
[ext_resource path="res://scenes/strScore.gd" type="Script" id=17]
[ext_resource path="res://resources/fonts/mago3.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://scenes/layerEndGame.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/layerStartGame.tscn" type="PackedScene" id=20]

[sub_resource type="Environment" id=15]
background_mode = 4
glow_enabled = true
glow_bloom = 0.1

[sub_resource type="CircleShape2D" id=14]
radius = 50.3587

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 409, 5.5 )

[sub_resource type="DynamicFont" id=16]
size = 32
outline_size = 4
outline_color = Color( 0.101961, 0.109804, 0.172549, 1 )
font_data = ExtResource( 18 )

[node name="mainDebug" type="Node"]
__meta__ = {
"_edit_vertical_guides_": [ 384.0 ]
}

[node name="worldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 15 )

[node name="debug2d" type="YSort" parent="."]

[node name="bg" type="Sprite" parent="debug2d"]
scale = Vector2( 2, 2 )
z_index = -500
texture = ExtResource( 11 )
centered = false

[node name="bgShadow" type="Sprite" parent="debug2d"]
modulate = Color( 1, 1, 1, 0.2 )
scale = Vector2( 2, 2 )
z_index = -500
texture = ExtResource( 13 )
centered = false

[node name="player" parent="debug2d" instance=ExtResource( 1 )]
position = Vector2( 384, 284 )

[node name="totem" type="StaticBody2D" parent="debug2d"]
position = Vector2( 384, 391 )
z_index = -10
script = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="debug2d/totem"]
texture = ExtResource( 4 )

[node name="sprEye" type="Sprite" parent="debug2d/totem"]
rotation = -1.57079
texture = ExtResource( 15 )

[node name="collisionShape2D" type="CollisionShape2D" parent="debug2d/totem"]
shape = SubResource( 14 )

[node name="timer" type="Timer" parent="debug2d/totem"]
wait_time = 10.0
autostart = true

[node name="canvasLayer" type="CanvasLayer" parent="debug2d/totem"]
visible = false

[node name="colorRect" type="ColorRect" parent="debug2d/totem/canvasLayer"]
modulate = Color( 0.230469, 0.230469, 0.230469, 0.3 )
margin_left = -90.0
margin_top = -83.0
margin_right = 896.0
margin_bottom = 896.0
color = Color( 0.231373, 0.364706, 0.788235, 1 )

[node name="enemySpawner" type="Node2D" parent="debug2d"]
position = Vector2( 384, 391 )
script = ExtResource( 9 )

[node name="timer" type="Timer" parent="debug2d/enemySpawner"]
wait_time = 0.2
autostart = true

[node name="boundaries" type="StaticBody2D" parent="debug2d"]
collision_layer = 2
collision_mask = 2

[node name="0" type="CollisionShape2D" parent="debug2d/boundaries"]
position = Vector2( 369, -4.5 )
shape = SubResource( 10 )

[node name="1" type="CollisionShape2D" parent="debug2d/boundaries"]
position = Vector2( 369, 770 )
shape = SubResource( 10 )

[node name="2" type="CollisionShape2D" parent="debug2d/boundaries"]
position = Vector2( -1, 387 )
rotation = -1.57079
shape = SubResource( 10 )

[node name="3" type="CollisionShape2D" parent="debug2d/boundaries"]
position = Vector2( 771, 387 )
rotation = -1.57079
shape = SubResource( 10 )

[node name="layerHud" type="CanvasLayer" parent="."]

[node name="hud" type="Control" parent="layerHud"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="marginContainer" type="MarginContainer" parent="layerHud/hud"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="hBoxContainer" type="HBoxContainer" parent="layerHud/hud/marginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 376.0

[node name="panelWeight" type="Panel" parent="layerHud/hud/marginContainer/hBoxContainer"]
visible = false
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="hboxWeight" type="HBoxContainer" parent="layerHud/hud/marginContainer/hBoxContainer/panelWeight"]
margin_right = 99.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="strWeight" type="Label" parent="layerHud/hud/marginContainer/hBoxContainer/panelWeight/hboxWeight"]
margin_left = 10.0
margin_top = 13.0
margin_right = 59.0
margin_bottom = 27.0
text = "Weight:"

[node name="strWeightValue" type="Label" parent="layerHud/hud/marginContainer/hBoxContainer/panelWeight/hboxWeight"]
margin_left = 63.0
margin_top = 13.0
margin_right = 71.0
margin_bottom = 27.0
text = "0"
script = ExtResource( 3 )

[node name="strWeightKg" type="Label" parent="layerHud/hud/marginContainer/hBoxContainer/panelWeight/hboxWeight"]
margin_left = 75.0
margin_top = 13.0
margin_right = 89.0
margin_bottom = 27.0
text = "kg"

[node name="vSeparator" type="VSeparator" parent="layerHud/hud/marginContainer/hBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 316.0
margin_bottom = 368.0
size_flags_horizontal = 3

[node name="panelTime" type="Panel" parent="layerHud/hud/marginContainer/hBoxContainer"]
visible = false
margin_right = 316.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="centerContainer" type="CenterContainer" parent="layerHud/hud/marginContainer/hBoxContainer"]
margin_right = 368.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="progressTime" type="TextureProgress" parent="layerHud/hud/marginContainer/hBoxContainer/centerContainer"]
visible = false
margin_left = 160.0
margin_top = -11.0
margin_right = 208.0
margin_bottom = 37.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 10.0
step = 0.1
value = 5.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 4
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
script = ExtResource( 10 )

[node name="strScore" type="Label" parent="layerHud/hud/marginContainer/hBoxContainer/centerContainer"]
margin_left = 177.0
margin_right = 191.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 16 )
text = "0"
script = ExtResource( 17 )

[node name="layerStartGame" parent="." instance=ExtResource( 20 )]

[node name="layerEndGame" parent="." instance=ExtResource( 19 )]

[connection signal="timeout" from="debug2d/totem/timer" to="debug2d/totem" method="_on_timer_timeout"]
[connection signal="timeout" from="debug2d/enemySpawner/timer" to="debug2d/enemySpawner" method="_on_timer_timeout"]
